Add Google site verification to index.html
Added Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="icons/abaui.png" type="image/png">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&f[]=general-sans@500,600,700&f[]=clash-display@600,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/all.css">
+    <meta name="google-site-verification" content="FE9ZSXhHwUU1qu3W3zBEM577ZytvXOecGQPWGF_Z0ec" />
 </head>
 <body>
     <nav class="nav">
@@ -121,6 +122,7 @@
     </script>
 </body>
 </html>
+
 
 
 
